--- a/login/styles.css
+++ b/login/styles.css
@@ -55,7 +55,7 @@ video{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.45);
   box-shadow: 0 0 50px rgba(0, 0 ,0 ,3);
   color: #fff;
   padding-top: 30px;
@@ -71,10 +71,12 @@ video{
 }
 
 input{
-  border-radius: 7px;
-  border: 1px solid;
+  border-radius: 10px;
+  border: 0.5px solid ;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 input:focus{
@@ -91,9 +93,13 @@ label{
 }
 
 .loginbtn{
-  background: #F95D5D;
+  background: rgb(249, 93, 93, 0.5);
   border: 0px;
   width: 90px;
+}
+
+.loginbtn:hover{
+  background: rgb(155, 0, 0, 0.6);
 }
 
 a{
@@ -102,6 +108,16 @@ a{
   font-family:'Inter', sans-serif;
   padding-top: 5px;
   margin-top: 5px;
+  color: black;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+a:visited{
+  color: black;
+  text-decoration: none;
 }
 
 .forgot1{
