--- a/login/styles.css
+++ b/login/styles.css
@@ -43,10 +43,15 @@ video{
   top: 50%;
   left: 50%;
   border-radius: 10px;
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 
 .login-form{
+    
   height: 530px;
   background-color: white;
   width: 300px;
@@ -55,7 +60,7 @@ video{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: rgba(255, 255, 255, 0.65);
+  background: rgba(255, 255, 255, 0.7);
   box-shadow: 0 0 50px rgba(0, 0 ,0 ,3);
   color: #fff;
   padding-top: 30px;
@@ -75,8 +80,10 @@ input{
   border: 0.5px solid ;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
-  color: black;
-  background-color: rgba(255, 255, 255, 0.5);
+  color: #333;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding:.5rem;
+  margin:.25rem 0;
 }
 
 input:focus{
@@ -90,13 +97,14 @@ label{
   right: 70px;
   top: 15px;
   color: black;
+ 
 }
 
 .loginbtn{
   background: rgb(249, 93, 93, 0.5);
   border: 0px;
   width: 90px;
-  color: white;
+  color:#fff;
 }
 
 .loginbtn:hover{
@@ -127,7 +135,6 @@ a:visited{
 
 .forgot2{
   font-size: 12px
-<<<<<<< HEAD
 }
 
 /* Formulario */
@@ -136,6 +143,3 @@ a:visited{
     margin:0 auto;
     text-align: center;
 }
-=======
-}
->>>>>>> 4c1e41a89f2ecdb3cee0f8b44ed4efe31956a78e
