Testeo branch, nada modificado

--- a/login/styles.css
+++ b/login/styles.css
@@ -117,7 +117,7 @@ a{
   font-family:'Inter', sans-serif;
   padding-top: 5px;
   margin-top: 5px;
-  color: black;
+  color: #000000;
 }
 
 a:hover{
